Fix up tab title font on iOS.

--- a/src/sass/views/tabs.scss
+++ b/src/sass/views/tabs.scss
@@ -67,8 +67,8 @@ ion-tabs {
  &.tabs-color-active-positive .tab-item {
   color: #B0B0B4;
   //fill: #B9B9B9;
-  font-family: ProximaNova-Semibold;
-  font-weight: 500;
+  font-family: ProximaNova;
+  font-weight: bold;
 
   &.tab-item-active {
     color: #FF8209;
